Adding maven wrapper files / fixing tests.